Mozilla Firefox add-ons and Eclipse IDE added